fx: footer text alignment fixed

--- a/src/Layout/Footer/Footer.module.css
+++ b/src/Layout/Footer/Footer.module.css
@@ -63,6 +63,7 @@
     color: var(--color-grey);
     cursor: pointer;
 }
+
 .FooterHiring button {
     margin-bottom: 15px;
 }
@@ -140,7 +141,7 @@
         flex-direction: column-reverse;
     }
 
-  
+
 }
 
 @media screen and (max-width: 414px) {
@@ -157,5 +158,19 @@
     .FooterMainChild:nth-child(3) p,
     .FooterMainChild:nth-child(4) p {
         padding: 0.2rem 0
+    }
+
+    .FooterMainChild p {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .FooterMainChild h2 {
+        padding-top: 2rem;
+        font-size: 14px;
+    }
+
+    .FooterLogo {
+        padding-bottom: 1.2rem;
     }
 }
