--- a/src/Layout/Team/Team.module.css
+++ b/src/Layout/Team/Team.module.css
@@ -272,7 +272,7 @@
     }
 
     .TeamMain p {
-        font-size: 7px;
+        font-size: 8px;
         line-height: 10px;
     }
 
